--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg  navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">icoder</a>
+            <a class="navbar-brand" href="/icoderbootstrap/">icoder</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -22,13 +22,13 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link " aria-current="page" href="/">Home</a>
+                        <a class="nav-link " aria-current="page" href="/icoderbootstrap">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="/about.html">About</a>
+                        <a class="nav-link " href="/icoderbootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/contact.html">Contact Us</a>
+                        <a class="nav-link active" href="/icoderbootstrap/contact.html">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
@@ -36,12 +36,12 @@
                             Menu
                         </a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">Technology</a></li>
-                            <li><a class="dropdown-item" href="#">Web Development</a></li>
+                            <li><a class="dropdown-item" href="/icoderbootstrap">Technology</a></li>
+                            <li><a class="dropdown-item" href="icoderbootstrap">Web Development</a></li>
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Courses</a></li>
+                            <li><a class="dropdown-item" href="/icoderbootstrap/about.html">Courses</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
