--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/static/Coding Img3.jpg" class="bd-placeholder-img" width="200" height="250" alt=""
+                        <img src="https://source.unsplash.com/random/1920x1080/?code,website" class="bd-placeholder-img" width="200" height="250" alt=""
                             srcset="">
 
                     </div>
@@ -240,7 +240,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                        <img src="/static/Coding Img2.jpg" class="bd-placeholder-img" width="200" height="250" alt=""
+                        <img src="https://source.unsplash.com/random/1920x1080/?coder,web" class="bd-placeholder-img" width="200" height="250" alt=""
                             srcset="">
 
                     </div>
