--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <a class="nav-link " href="/icoderbootstrap/about.html">About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active" href="/icoderbootstrap/contact.html">Contact Us</a>
+                        <a class="nav-link active" href="/icoderbootstrap/about.html">Contact Us</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
